# chat

./: .commitlintrc.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  cliff.toml  release-please-config.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
src/: component.rs  component_json.rs  component_nbt.rs  formatting.rs  lib.rs  style.rs
