[package]
name         = "oxidized-chat"
version      = "0.1.0"
edition      = "2024"
authors      = ["Dogukan Metan <dogukanmetan@gmail.com>"]
license      = "MIT"
repository   = "https://github.com/oxidized-mc/chat"
homepage     = "https://github.com/oxidized-mc/chat"
rust-version = "1.85"
readme       = "README.md"
documentation = "https://docs.rs/oxidized-chat"
description  = "Minecraft chat component system — Component tree, Style, ChatFormatting, TextColor, JSON/NBT serialization"
keywords     = ["minecraft", "oxidized-mc"]
categories   = ["game-development"]

[dependencies]
oxidized-nbt         = "0.1.0-dev"
oxidized-mc-types    = "0.3"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"

[dev-dependencies]
proptest = "1"

[lints.rust]
missing_docs   = "warn"
unsafe_code    = "deny"
unused_imports = "warn"

[lints.clippy]
# Correctness — hard errors
correctness                = { level = "deny", priority = -1 }
# Performance and style — warnings
perf                       = { level = "warn", priority = -1 }
style                      = { level = "warn", priority = -1 }
complexity                 = { level = "warn", priority = -1 }
suspicious                 = { level = "warn", priority = -1 }
# Specific useful lints
unwrap_used                = "deny"
expect_used                = "deny"
panic                      = "deny"
print_stdout               = "deny"
print_stderr               = "deny"
needless_pass_by_value     = "warn"
redundant_clone            = "warn"
# Noisy lints intentionally suppressed
module_name_repetitions    = "allow"
must_use_candidate         = "allow"
cast_possible_truncation   = "allow"
cast_sign_loss             = "allow"
cast_possible_wrap         = "allow"
